force-app/main/default/objects/Campaign_Member_Record_Log__c/Campaign_Member_Record_Log__c.object-meta.xml
<CustomObject>
    <label>Campaign Member Record Log</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Campaign Member Record Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Record Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>