force-app/main/default/objects/Campaign_Member_Record_Log__c/fields/Github_Id__c.field-meta.xml
<CustomField>
    <fullName>Github_Id__c</fullName>
    <label>Github Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>