force-app/main/default/objects/Campaign_Member_Record_Log__c/fields/Linkedin_Id__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Id__c</fullName>
    <label>Linkedin Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>