force-app/main/default/objects/Campaign_Member_Record_Log__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <length>250</length>
    <type>Text</type>
</CustomField>