force-app/main/default/objects/Campaign_Member_Record_Log__c/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <label>Newsletter</label>
    <length>250</length>
    <type>Text</type>
</CustomField>